[package]
name = "printk"
version = "0.3.2"
keywords = ["no_std", "logger"]
description  = "A standalone, `#![no_std]`-friendly `Logger` crate."
documentation = "https://docs.rs/printk"
repository = "https://github.com/kennystrawnmusic/printk"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4.14"
bootloader_api = "^0.11.0"
noto-sans-mono-bitmap = "^0.2.0"
x86_64 = "0.14.10"

[dependencies.spinning_top]
version = "^0.2.4"
features = ["nightly"]

[dependencies.conquer-once]
version = "^0.3.2"
default-features = false
